Completed PersonHandPart editor

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-hand-part/person-hand-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-hand-part/person-hand-part.component.html
@@ -173,7 +173,12 @@
         <mat-tab label="signs">
           <!-- signs -->
           <div>
-            <button mat-stroked-button type="button" (click)="addSign()">
+            <button
+              mat-stroked-button
+              type="button"
+              color="primary"
+              (click)="addSign()"
+            >
               <mat-icon>add_circle</mat-icon> add sign
             </button>
           </div>
