--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
@@ -1,10 +1,196 @@
 <form [formGroup]="form" (submit)="save()">
   <mat-tab-group>
-    <mat-tab label="general"></mat-tab>
-    <mat-tab label="from"></mat-tab>
-    <mat-tab label="to"></mat-tab>
-    <mat-tab label="sources"></mat-tab>
-    <mat-tab label="attachments"></mat-tab>
+    <mat-tab label="general">
+      <div>
+        <!-- dubious -->
+        <mat-checkbox [formControl]="dubious">dubious</mat-checkbox>
+
+        <!-- indirect -->
+        <mat-checkbox [formControl]="indirect">indirect</mat-checkbox>
+
+        <!-- participant -->
+        <mat-checkbox [formControl]="participant"
+          >from participant</mat-checkbox
+        >
+      </div>
+
+      <!-- participants -->
+      <h4>participants</h4>
+      <cadmus-decorated-ids
+        [ids]="participants"
+        [tagEntries]="tagEntries"
+        (idsChange)="onParticipantsChange($event)"
+      ></cadmus-decorated-ids>
+    </mat-tab>
+
+    <mat-tab label="from">
+      <!-- from -->
+      <cadmus-chronotope
+        [chronotope]="from"
+        [tagEntries]="tagEntries"
+        (chronotopeChange)="onFromChange($event)"
+      ></cadmus-chronotope>
+    </mat-tab>
+
+    <mat-tab label="to">
+      <!-- to -->
+      <cadmus-chronotope
+        [chronotope]="to"
+        [tagEntries]="tagEntries"
+        (chronotopeChange)="onToChange($event)"
+      ></cadmus-chronotope>
+    </mat-tab>
+
+    <mat-tab label="sources">
+      <!-- sources -->
+      <cadmus-doc-references
+        [model$]="sources$"
+        (modelChange)="onSourcesChange($event)"
+      ></cadmus-doc-references>
+    </mat-tab>
+
+    <mat-tab label="attachments">
+      <!-- attachments -->
+      <div formArrayName="attachments">
+        <div>
+          <button
+            type="button"
+            mat-stroked-button
+            color="primary"
+            (click)="addAttachment()"
+          >
+            add attachment
+          </button>
+        </div>
+        <div
+          *ngFor="
+            let item of attachments.controls;
+            let i = index;
+            let first = first;
+            let last = last
+          "
+        >
+          <!-- child form -->
+          <div [formGroupName]="i">
+            <!-- child actions -->
+            {{ i + 1 }}.
+            <button
+              mat-icon-button
+              type="button"
+              matTooltip="Remove this attachment"
+              color="warn"
+              (click)="removeAttachment(i)"
+            >
+              <mat-icon>remove_circle</mat-icon>
+            </button>
+            <button
+              [disabled]="first"
+              mat-icon-button
+              type="button"
+              matTooltip="Move attachment up"
+              (click)="moveAttachmentUp(i)"
+            >
+              <mat-icon>arrow_upward</mat-icon>
+            </button>
+            <button
+              [disabled]="last"
+              mat-icon-button
+              type="button"
+              matTooltip="Move attachment down"
+              (click)="moveAttachmentDown(i)"
+            >
+              <mat-icon>arrow_downward</mat-icon>
+            </button>
+
+            <!-- child controls -->
+            <!-- type (bound) -->
+            <mat-form-field *ngIf="typeEntries?.length" style="width: 8em">
+              <mat-select formControlName="type" placeholder="type">
+                <mat-option *ngFor="let e of typeEntries" [value]="e.id">{{
+                  e.value
+                }}</mat-option>
+              </mat-select>
+              <mat-error
+                *ngIf="
+                  item['controls'].type.errors?.required &&
+                  (item['controls'].type.dirty || item['controls'].type.touched)
+                "
+                >type required</mat-error
+              >
+            </mat-form-field>
+
+            <!-- type (free) -->
+            <mat-form-field>
+              <input matInput formControlName="type" placeholder="type" />
+              <mat-error
+                *ngIf="
+                  item['controls'].type.errors?.required &&
+                  (item['controls'].type.dirty || item['controls'].type.touched)
+                "
+                >type required</mat-error
+              >
+              <mat-error
+                *ngIf="
+                  item['controls'].type.errors?.maxLength &&
+                  (item['controls'].type.dirty || item['controls'].type.touched)
+                "
+                >type too long</mat-error
+              >
+            </mat-form-field>
+
+            <!-- name -->
+            &nbsp;
+            <mat-form-field style="width: 20em">
+              <input matInput formControlName="name" placeholder="name" />
+              <mat-error
+                *ngIf="
+                  item['controls'].name.errors?.required &&
+                  (item['controls'].name.dirty || item['controls'].name.touched)
+                "
+                >name required</mat-error
+              >
+              <mat-error
+                *ngIf="
+                  item['controls'].name.errors?.maxLength &&
+                  (item['controls'].name.dirty || item['controls'].name.touched)
+                "
+                >name too long</mat-error
+              >
+            </mat-form-field>
+
+            <!-- portion -->
+            &nbsp;
+            <mat-form-field style="width: 8em">
+              <input matInput formControlName="portion" placeholder="portion" />
+              <mat-error
+                *ngIf="
+                  item['controls'].portion.errors?.maxLength &&
+                  (item['controls'].portion.dirty ||
+                    item['controls'].portion.touched)
+                "
+                >portion too long</mat-error
+              >
+            </mat-form-field>
+
+            <!-- note -->
+            <div style="margin-left: 120px">
+              &nbsp;
+              <mat-form-field>
+                <input matInput formControlName="note" placeholder="note" />
+                <mat-error
+                  *ngIf="
+                    item['controls'].note.errors?.maxLength &&
+                    (item['controls'].note.dirty ||
+                      item['controls'].note.touched)
+                  "
+                  >note too long</mat-error
+                >
+              </mat-form-field>
+            </div>
+          </div>
+        </div>
+      </div>
+    </mat-tab>
   </mat-tab-group>
 
   <!-- buttons -->
