--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotope/chronotope.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotope/chronotope.component.html
@@ -23,7 +23,6 @@
     </ng-container>
   </div>
 
-  <hr />
   <!-- place -->
   <div>
     <mat-form-field>
@@ -39,11 +38,12 @@
     </mat-form-field>
   </div>
 
-  <hr />
   <!-- date -->
+  <h4>date</h4>
   <div>
     <cadmus-historical-date-editor
-      [(date)]="date"
+      [date]="date"
+      (dateChange)="onDateChange($event)"
     ></cadmus-historical-date-editor>
   </div>
 
@@ -88,10 +88,11 @@
     <button
       type="submit"
       color="primary"
-      mat-flat-button
+      mat-icon-button
       matTooltip="Save this chronotope"
+      [disabled]="form.invalid || form.pristine"
     >
-      <mat-icon>check_circle</mat-icon> save
+      <mat-icon>check_circle</mat-icon>
     </button>
   </div>
 </form>
