--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/chronotopics-part/chronotopics-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/chronotopics-part/chronotopics-part.component.html
@@ -16,7 +16,7 @@
               color="primary"
               (click)="addChronotope()"
             >
-              <mat-icon>add_circle</mat-icon> add chronotopic
+              <mat-icon>add_circle</mat-icon> add chronotope
             </button>
           </div>
           <table *ngIf="chronotopes?.length">
