Label in add dedication

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-dedications-part/corr-dedications-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-dedications-part/corr-dedications-part.component.html
@@ -14,10 +14,9 @@
               type="button"
               mat-icon-button
               color="primary"
-              matTooltip="Add dedication"
               (click)="addDedication()"
             >
-              <mat-icon>add_circle</mat-icon>
+              <mat-icon>add_circle</mat-icon> add dedication
             </button>
           </div>
           <table *ngIf="dedications?.length">
