--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/physical-size/physical-size.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/physical-size/physical-size.component.html
@@ -30,7 +30,7 @@
         type="number"
         min="0"
         [formControl]="wValue"
-        placeholder="value"
+        placeholder="width"
       />
     </mat-form-field>
     &nbsp;
@@ -74,7 +74,7 @@
         type="number"
         min="0"
         [formControl]="hValue"
-        placeholder="value"
+        placeholder="height"
       />
     </mat-form-field>
     &nbsp;
@@ -118,7 +118,7 @@
         type="number"
         min="0"
         [formControl]="dValue"
-        placeholder="value"
+        placeholder="depth"
       />
     </mat-form-field>
     &nbsp;
