Added sources label

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/lit-dedication/lit-dedication.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/lit-dedication/lit-dedication.component.html
@@ -40,6 +40,7 @@
   <br />
   <!-- sources -->
   <div>
+    <h4>sources</h4>
     <cadmus-doc-references
       [model$]="sources$"
       [tagEntries]="tagEntries"
