Minor changes to corr exchanges

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchanges-part/corr-exchanges-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchanges-part/corr-exchanges-part.component.html
@@ -14,10 +14,9 @@
               type="button"
               mat-icon-button
               color="primary"
-              matTooltip="Add exchange"
               (click)="addExchange()"
             >
-              <mat-icon>add_circle</mat-icon>
+              <mat-icon>add_circle</mat-icon> add exchange
             </button>
           </div>
           <table *ngIf="exchanges?.length">
