--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
@@ -176,9 +176,8 @@
             </mat-form-field>
 
             <!-- note -->
-            <div style="margin-left: 130px; width: 90%; max-width: 600px">
-              &nbsp;
-              <mat-form-field>
+            <div>
+              <mat-form-field style="margin-left: 130px; width: 90%; max-width: 600px">
                 <input matInput formControlName="note" placeholder="note" />
                 <mat-error
                   *ngIf="
