Poetic text info thesauri

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/poetic-text-info-part/poetic-text-info-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/poetic-text-info-part/poetic-text-info-part.component.html
@@ -170,6 +170,10 @@
         <mat-tab *ngIf="editedAuthor" label="author">
           <cadmus-cited-person
             [person]="editedAuthor"
+            [langEntries]="langEntries"
+            [nameTagEntries]="nameTagEntries"
+            [nameTypeEntries]="nameTypeEntries"
+            [idTagEntries]="idTagEntries"
             (personChange)="onAuthorSaved($event)"
             (editorClose)="onAuthorClosed()"
           ></cadmus-cited-person>
