Fixes to ms contents editor

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-contents-part/ms-contents-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-contents-part/ms-contents-part.component.html
@@ -14,10 +14,9 @@
               type="button"
               mat-icon-button
               color="primary"
-              matTooltip="Add content"
               (click)="addContent()"
             >
-              <mat-icon>add_circle</mat-icon>
+              <mat-icon>add_circle</mat-icon> add content
             </button>
           </div>
           <table *ngIf="contents?.length">
