Show type from thesaurus in decorations

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decorations-part/ms-decorations-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decorations-part/ms-decorations-part.component.html
@@ -77,7 +77,7 @@
                     <mat-icon>remove_circle</mat-icon>
                   </button>
                 </td>
-                <td>{{ d.type }}</td>
+                <td>{{ typeIdToString(d.type) }}</td>
                 <td>{{ d.subject }}</td>
                 <td>{{ locationToString(d.start) }}</td>
                 <td>{{ locationToString(d.end) }}</td>
