--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-hands-part/ms-hands-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-hands-part/ms-hands-part.component.html
@@ -14,10 +14,9 @@
               type="button"
               mat-icon-button
               color="primary"
-              matTooltip="Add hand"
               (click)="addHand()"
             >
-              <mat-icon>add_circle</mat-icon>
+              <mat-icon>add_circle</mat-icon> add hand
             </button>
           </div>
           <table *ngIf="hands?.length">
